syntax = "proto3";

import "google/protobuf/empty.proto";

package class;

option go_package = "proto/class";

// Service for class information
service ClassService {
  rpc GetClassInfo(ClassRequest) returns (ClassResponse);
  rpc GetClassList(google.protobuf.Empty) returns (ClassListResponse);
}

// Request to get class info by ID
message ClassRequest {
  int64 class_id = 1;
}

// Response with class information
message ClassResponse {
  int64 id = 1;
  string year = 2;
  int64 number = 3;
  string updated = 4;
  string created = 5;
}

message ClassListResponse {
  repeated ClassResponse classes = 1;
}